<resources>
    <string name="app_name">Projeto 1 Estagio2</string>
    <string name="title_activity_contatos">Contatos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="logout">Sair</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="contact">Contato</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="save">Salvar</string>
    <string name="showEmail">Mostrar E-mail?</string>
    <string name="showFriends">Mostrar Amigos?</string>
    <string name="configuration">Configurações</string>
    <string name="accessWebsite">Acessar Site</string>

</resources>
