<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pedro.projeto1estagio2.Configuracoes"
    android:orientation="vertical">
    <CheckBox
        android:id="@+id/cbShowEmail"
        android:text="@string/showEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/cbShowFriends"
        android:text="@string/showFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btSaveConfig"
        android:text="@string/save"
        android:onClick="saveConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
