<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pedro.projeto1estagio2.EditarPerfil">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/profile_icon"/>
            <EditText
                android:id="@+id/etChangeUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <EditText
        android:id="@+id/etChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editProfile"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/etChangePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editProfile"
        android:hint="@string/phone"/>
    <Button
        android:id="@+id/btSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveProfile"
        android:text="@string/save"/>
</LinearLayout>
